syntax = "proto3";

import "tensorflow/core/protobuf/checkpointable_object_graph.proto";

option cc_enable_arenas = true;

package tensorflow;

// A SavedObjectGraph is part of object-based SavedModels in TF 2.0. It
// describes the directed graph of Python objects (or equivalent in other
// languages) that make up a model, with nodes[0] at the root.

// SavedObjectGraph shares some structure with CheckpointableObjectGraph, but
// ObjectGraph belongs to the SavedModel and contains pointers to functions and
// type information, while CheckpointableObjectGraph lives in the checkpoint and
// contains pointers only to variable values.

// NOTE: This protocol buffer format is experimental and subject to change.

message SavedObjectGraph {
  message SavedObject {
    // Objects which this object depends on: named edges in the dependency
    // graph.
    repeated CheckpointableObjectGraph.CheckpointableObject.ObjectReference
        children = 1;
    // Removed when forking from CheckpointableObjectGraph.
    reserved "attributes";
    reserved 2;
    // Slot variables owned by this object. This describes the three-way
    // (optimizer, variable, slot variable) relationship; none of the three
    // depend on the others directly.
    repeated
        CheckpointableObjectGraph.CheckpointableObject.SlotVariableReference
            slot_variables = 3;
  }

  repeated SavedObject nodes = 1;
}
